--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://rdi.berkeley.edu'" />
+    <meta http-equiv="refresh" content="0; url='https://understanding-ai-safety.org'" />
   </head>
 </html>
